Refactor for rollup, convert build process to rollup and bundle an ESM build

--- a/src/stories/components/ChecImageUploader.stories.mdx
+++ b/src/stories/components/ChecImageUploader.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
 import { boolean, text, number, select } from '@storybook/addon-knobs';
 import ChecImageManager from '../../components/ChecImageManager.vue';
-import ImageBlock from '@/components/ChecImageManager/ImageBlock';
+import ImageBlock from '@/components/ChecImageManager/ImageBlock.vue';
 
 <Meta title="Form fields/Image manager" component={ChecImageManager} />
 
