--- a/src/stories/components/ChecLineChart.stories.mdx
+++ b/src/stories/components/ChecLineChart.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Preview, Props, Story } from '@storybook/addon-docs/blocks';
-import ChecLineChart from '@/components/ChecLineChart';
-import ChecButton from '@/components/ChecButton';
+import ChecLineChart from '@/components/ChecLineChart.vue';
+import ChecButton from '@/components/ChecButton.vue';
 import { boolean } from '@storybook/addon-knobs';
 
 <Meta title="Components/Charts" component={ChecLineChart} />
