--- a/src/stories/components/ChecHeader.stories.mdx
+++ b/src/stories/components/ChecHeader.stories.mdx
@@ -1,7 +1,5 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from "@storybook/addon-actions";
-import { withKnobs, text, select } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info';
+import { text, select } from '@storybook/addon-knobs';
 import ChecHeader from '@/components/ChecHeader.vue';
 import ChecButton from '@/components/ChecButton.vue';
 
