--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -1,7 +1,6 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from "@storybook/addon-actions";
-import { withKnobs, object, boolean, text, select, number } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info'
+import { boolean, text, select, number } from '@storybook/addon-knobs';
 import TextField from '../../components/TextField.vue';
 import ChecIcon from '../../components/ChecIcon.vue';
 import ChecFormField from '../../components/ChecFormField.vue';
