--- a/src/stories/FormFields.stories.mdx
+++ b/src/stories/FormFields.stories.mdx
@@ -1,7 +1,4 @@
-import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from "@storybook/addon-actions";
-import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info'
+import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 import TextField from '../components/TextField.vue';
 import ChecDropdown from '../components/ChecDropdown.vue';
 
