--- a/src/stories/components/ChecIcon.stories.mdx
+++ b/src/stories/components/ChecIcon.stories.mdx
@@ -1,7 +1,5 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from "@storybook/addon-actions";
-import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info'
+import { select } from '@storybook/addon-knobs';
 import ChecIcon from '../../components/ChecIcon.vue';
 import ChecNavIcon from '../../components/ChecNavIcon.vue';
 import ChecMarketingIcon from '../../components/ChecMarketingIcon.vue';
