--- a/src/stories/components/ChecSwitch.stories.mdx
+++ b/src/stories/components/ChecSwitch.stories.mdx
@@ -1,7 +1,5 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from "@storybook/addon-actions";
-import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
-import { withInfo } from 'storybook-addon-vue-info';
+import { boolean, text } from '@storybook/addon-knobs';
 import ChecSwitch from '@/components/ChecSwitch.vue';
 
 <Meta title="Form fields/Switch" component={ ChecSwitch } />
