--- a/src/stories/components/ChecButton.stories.mdx
+++ b/src/stories/components/ChecButton.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import { action } from "@storybook/addon-actions";
 import { withKnobs, object, boolean, text, select } from '@storybook/addon-knobs';
+import StoryRouter from 'storybook-vue-router';
 import ChecButton from '../../components/ChecButton.vue';
 import CloseIcon from '../../assets/svgs/close-icon.svg';
 import ChecIcon from '../../components/ChecIcon.vue';
@@ -138,19 +139,27 @@ This is a button modified using the Color and Variant props.
   </Story>
 </Preview>
 
-## Full width
+## As a router-link
 
 <Preview>
-  <Story name="Full width">
+  <Story name="As a router-link" decorators={[StoryRouter({}, {
+    initialEntry: "/",
+    routes: [
+      {
+        path: '/test',
+        name: 'test',
+      },
+    ]
+  })]}>
     {{
       components: {
         ChecButton,
       },
       template: `
-      <div class="py-16 px-8 justify-center">
-        <chec-button class="w-full" color="primary">
-          Full width
-        </chec-button>
+      <div class="py-16 justify-center">
+        <ChecButton class="mx-auto" color="primary" tag-type="route" :to="{ name: 'test' }">
+          Router link
+        </ChecButton>
       </div>`,
     }}
   </Story>
