--- a/src/stories/components/ChecOptionsMenu.stories.mdx
+++ b/src/stories/components/ChecOptionsMenu.stories.mdx
@@ -82,6 +82,27 @@ import ChecNavIcon from '../../components/ChecNavIcon.vue';
         ChecOption,
         ChecOptionsMenu,
       },
+      props: {
+        menuPlacement: {
+          default: select('Menu placement', [
+            'auto',
+            'auto-start',
+            'auto-end',
+            'top',
+            'top-start',
+            'top-end',
+            'bottom',
+            'bottom-start',
+            'bottom-end',
+            'right',
+            'right-start',
+            'right-end',
+            'left',
+            'left-start',
+            'left-end'
+          ], 'bottom'),
+        },
+      },
       methods: {
         action: action('option-selected'),
       },
