--- a/src/stories/components/ChecAccordion.stories.mdx
+++ b/src/stories/components/ChecAccordion.stories.mdx
@@ -29,6 +29,9 @@ import TextField from '../../components/TextField.vue';
           default: select('Variant', ['button', 'switch'], 'button'),
         },
       },
+      methods: {
+        toggle: action('toggled'),
+      },
       template: `
         <div class="p-16 flex justify-center w-full">
           <ChecAccordion
@@ -36,6 +39,7 @@ import TextField from '../../components/TextField.vue';
             :subtitle="subtitle"
             :variant="variant"
             class="w-1/2"
+            @toggled="toggle"
           >
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor imperdiet pellentesque. Mauris quam enim, vehicula ac felis vel, tempus tincidunt massa.</p>
             <p>Mauris eget mi neque. Nullam eu est a velit mattis cursus vel nec purus. Pellentesque tincidunt ornare auctor.</p>
