--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -19,10 +19,19 @@ import TextField from '../../components/TextField.vue';
       },
       props: {
         borders: {
-          default: select('Borders', ['full', 'none', 'vertical', 'horizontal']),
+          default: select('Borders', ['none', 'full', 'vertical', 'horizontal'], 'none'),
+        },
+        borderStyle: {
+          default: select('Border style', ['dark', 'light', 'holo'], 'holo'),
+        },
+        background: {
+          default: select('Background', ['white', 'dark', 'transparent', 'gray'], 'white'),
         },
         compact: {
           default: boolean('Compact')
+        },
+        shadow: {
+          default: boolean('Shadow', true)
         },
         active: {
           default: boolean('Active', false)
@@ -33,7 +42,16 @@ import TextField from '../../components/TextField.vue';
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard :borders="borders" :compact="compact" :active="active" :hoverable="hoverable" class="w-40 h-40">
+          <ChecCard
+            :borders="borders"
+            :compact="compact"
+            :background="background"
+            :border-style="borderStyle"
+            :shadow="shadow"
+            :active="active"
+            :hoverable="hoverable"
+            class="w-40 h-40"
+          >
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -50,21 +68,40 @@ import TextField from '../../components/TextField.vue';
         ChecCard
       },
       props: {
+        borderStyle: {
+          default: select('Border style', ['dark', 'light', 'holo'], 'holo'),
+        },
         active: {
           default: boolean('Active', false)
         },
         hoverable: {
           default: boolean('Hoverable', true)
         },
+        background: {
+          default: select('Background', ['white', 'dark', 'gray', 'transparent'], 'white'),
+        },
+        shadow: {
+          default: boolean('Shadow', true),
+        },
       },
       data() {
         return {
-          borders: ['full', 'none', 'vertical', 'horizontal'],
+          borders: ['none', 'full', 'vertical', 'horizontal'],
         };
       },
       template: `
         <div class="p-16 flex flex-col justify-between items-center w-full bg-gray-100 space-y-4">
-          <ChecCard v-for="border in borders" :borders="border" :active="active" :hoverable="hoverable" class="w-1/2 h-40 text-center">
+          <ChecCard
+            v-for="border in borders"
+            :borders="border"
+            :border-style="borderStyle"
+            :background="background"
+            :shadow="shadow"
+            :active="active"
+            :hoverable="hoverable"
+            class="w-1/2 h-40
+            text-center"
+          >
             <code class="text-center">borders="{{ border }}"</code>
           </ChecCard>
         </div>`
@@ -84,13 +121,16 @@ import TextField from '../../components/TextField.vue';
         hoverable: {
           default: boolean('Hoverable', true)
         },
+        shadow: {
+          default: boolean('Shadow')
+        },
       },
       components: {
         ChecCard
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard borders="full" compact :active="active" :hoverable="hoverable" class="w-40 h-40">
+          <ChecCard borders="full" border-style="holo" :shadow="shadow" background="white" compact :active="active" :hoverable="hoverable" class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -109,7 +149,10 @@ import TextField from '../../components/TextField.vue';
       },
       props: {
         borders: {
-          default: select('Borders', ['full', 'none', 'vertical', 'horizontal']),
+          default: select('Borders', ['full', 'none', 'dark', 'light'], 'full'),
+        },
+        background: {
+          default: select('Background', ['white', 'dark', 'gray', 'transparent'], 'white'),
         },
         active: {
           default: boolean('Active', false)
@@ -117,13 +160,17 @@ import TextField from '../../components/TextField.vue';
         hoverable: {
           default: boolean('Hoverable', true)
         },
+        shadow: {
+          default: boolean('Shadow')
+        },
       },
       template: `
         <div class="p-16 flex justify-center w-full font-lato">
           <ChecCard
             :borders="borders"
+            :background="background"
+            :shadow="shadow"
             class="w-full max-w-lg"
-            tailwind="bg-gray-100"
             :active="active"
             :hoverable="hoverable"
           >
