--- a/src/stories/components/ChecCard.stories.mdx
+++ b/src/stories/components/ChecCard.stories.mdx
@@ -30,8 +30,8 @@ import TextField from '../../components/TextField.vue';
         compact: {
           default: boolean('Compact')
         },
-        shadow: {
-          default: boolean('Shadow', true)
+        noShadow: {
+          default: boolean('No shadow?')
         },
         active: {
           default: boolean('Active', false)
@@ -47,7 +47,7 @@ import TextField from '../../components/TextField.vue';
             :compact="compact"
             :background="background"
             :border-style="borderStyle"
-            :shadow="shadow"
+            :no-shadow="noShadow"
             :active="active"
             :hoverable="hoverable"
             class="w-40 h-40"
@@ -80,8 +80,8 @@ import TextField from '../../components/TextField.vue';
         background: {
           default: select('Background', ['white', 'dark', 'gray', 'transparent'], 'white'),
         },
-        shadow: {
-          default: boolean('Shadow', true),
+        noShadow: {
+          default: boolean('No shadow'),
         },
       },
       data() {
@@ -96,7 +96,7 @@ import TextField from '../../components/TextField.vue';
             :borders="border"
             :border-style="borderStyle"
             :background="background"
-            :shadow="shadow"
+            :no-shadow="noShadow"
             :active="active"
             :hoverable="hoverable"
             class="w-1/2 h-40
@@ -121,8 +121,8 @@ import TextField from '../../components/TextField.vue';
         hoverable: {
           default: boolean('Hoverable', true)
         },
-        shadow: {
-          default: boolean('Shadow')
+        noShadow: {
+          default: boolean('No shadow?')
         },
       },
       components: {
@@ -130,7 +130,7 @@ import TextField from '../../components/TextField.vue';
       },
       template: `
         <div class="p-16 flex justify-center w-full bg-gray-100">
-          <ChecCard borders="full" border-style="holo" :shadow="shadow" background="white" compact :active="active" :hoverable="hoverable" class="w-40 h-40">
+          <ChecCard borders="full" border-style="holo" :no-shadow="noShadow" background="white" compact :active="active" :hoverable="hoverable" class="w-40 h-40">
             <p class="self-center mx-auto">Nothing here</p>
           </ChecCard>
         </div>`
@@ -160,8 +160,8 @@ import TextField from '../../components/TextField.vue';
         hoverable: {
           default: boolean('Hoverable', true)
         },
-        shadow: {
-          default: boolean('Shadow')
+        noShadow: {
+          default: boolean('No shadow?')
         },
       },
       template: `
@@ -169,7 +169,7 @@ import TextField from '../../components/TextField.vue';
           <ChecCard
             :borders="borders"
             :background="background"
-            :shadow="shadow"
+            :no-shadow="noShadow"
             class="w-full max-w-lg"
             :active="active"
             :hoverable="hoverable"
