--- a/src/stories/components/ChecCard/InnerBlock.stories.mdx
+++ b/src/stories/components/ChecCard/InnerBlock.stories.mdx
@@ -75,7 +75,7 @@ import ChecHeader from '../../../components/ChecHeader.vue';
       },
       template: `
         <div class="mt-8 flex justify-around max-w-md mx-auto">
-          <ChecCard tailwind="p-4" class="w-full" shadow background="full">
+          <ChecCard tailwind="p-4" class="w-full" borders="full">
             <ChecHeader variant="card" title="Demo card" />
             <p class="py-4">Some misc card content</p>
             <InnerBlock :title="title" :titleTag="titleTag" :actionText="actionText" :actionColor="actionColor">
